Wip broken serialisation